# celaut

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
app/: main.cpp
include/automatons/: conway.hpp  enterprise.hpp
include/celaut/: celaut.hpp
